[JSON-1] Parse simple 1

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <title>Json Parse</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
 <div id="toolbar">
-    <button class="w3-green w3-hover-white w3-hover-text-green" onclick="submitTryit()">See Result »</button>
+    <button class="w3-green w3-hover-white w3-hover-text-green">See Result »</button>
 </div>
 <div class="container">
-    <textarea id="json-text" class="col">
+    <textarea id="jsonText" class="col">
     </textarea>
 
-    <div id="json-parse" class="col">
+    <div id="jsonParse" class="col">
 
     </div>
 </div>
