[JSON-2] Simple CSS for JSON PASER - button CSS

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
 <div id="toolbar">
-    <button class="w3-green w3-hover-white w3-hover-text-green">See Result »</button>
+    <button class="button button1">See Result »</button>
 </div>
 <div class="container">
-    <textarea id="jsonText" class="col">
-    </textarea>
+    <textarea id="jsonText" class="col col1"></textarea>
 
-    <div id="jsonParse" class="col">
+    <div id="jsonParse" class="col col2">
 
     </div>
 </div>
