[JSON-2] Simple CSS for JSON PASER

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <textarea id="jsonText" class="col col1"></textarea>
 
     <div id="jsonParse" class="col col2">
-
+    	<p>Result...</p>
     </div>
+</div>
+<div class="footer">
+	<p>Edited by TG</p>
 </div>
 </body>
 </html>
