--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Json Parse</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="index.js"></script>
 </head>
@@ -12,10 +13,10 @@
     <button class="button button1">See Result »</button>
 </div>
 <div class="container">
-    <textarea id="jsonText" class="col col1"></textarea>
+    <textarea id="jsonText" class="col col1" autofocus></textarea>
 
     <div id="jsonParse" class="col col2">
-    	<p>Result...</p>
+    	<p>&nbsp;Result...</p>
     </div>
 </div>
 <div class="footer">
