--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Json Parse</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="script/css/index.css">
+    <link rel="shortcut icon" href="image/icon/favicon.ico" type="image/x-icon" />
+    <script src="lib/js/jquery-3.1.0.min.js"></script>
+    <script src="script/js/index.js"></script>
 </head>
 <body>
 <div id="toolbar">
