--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--    twitter card -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Json Parse quick and safe ">
-    <meta property="twitter:description" content="Analyze JSON string as you type with an online Javascript parser, featuring tree view and syntax highlighting. Processing is quick and safe with no data send to server.">
+    <meta property="twitter:description" content="">
     <meta property="twitter:image" content="https://thienthansao29.github.io/image/konsan134.jpg">
 
     <!--    keywords -->
