--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 
     <!-- meta tag -->
     <meta name="author" content="TG">
-    <meta name="description" content="Analyze JSON string as you type with an online Javascript parser, featuring tree view and syntax highlighting. Processing is quick and safe with no data send to server.">
+    <meta name="description" content="Ana　lyze JSON string as you type with an online Javascript parser, featuring tree view and syntax highlighting. Processing is quick and safe with no data send to server.">
 
     <!--    OGP  -->
     <meta property="og:locale" content="ja_JP">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://thienthansao29.github.io">
     <meta property="og:title" content="Json Parse quick and safe ">
-    <meta property="og:description" content="Analyze JSON string as you type with an online Javascript parser, featuring tree view and syntax highlighting. Processing is quick and safe with no data send to server.">
+    <meta property="og:description" content="Ana　lyze JSON string as you type with an online Javascript parser, featuring tree view and syntax highlighting. Processing is quick and safe with no data send to server.">
     <meta property="og:image" content="https://thienthansao29.github.io/image/konsan134.jpg">
 
     <!--    twitter card -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Json Parse quick and safe ">
-    <meta property="twitter:description" content="　">
+    <meta property="twitter:description" content="Ana　lyze JSON string as you type with an online Javascript parser, featuring tree view and syntax highlighting. Processing is quick and safe with no data send to server.">
     <meta property="twitter:image" content="https://thienthansao29.github.io/image/konsan134.jpg">
 
     <!--    keywords -->
